# ice_script

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.txt
conan/llvm-core/: conanfile.py
design/: analyzer.puml  ice_script.puml  symbol.puml  type.puml
include/: Context.hpp  IceScriptEngine.hpp  Library.hpp  pch.hpp  pch_boost.hpp  pch_ice_script.hpp  pch_llvm.hpp  pch_ranges_v3.hpp  pch_std.hpp
include/analyzer/: Analyzer.hpp  AnalyzerUtilities.hpp  AnalyzerVisitor.hpp  Context.hpp  FunctionSymbol.hpp  Scope.hpp  Symbol.hpp  SymbolTable.hpp  TypeTable.hpp
include/analyzer/detail/: AnalyzerUtilities.hpp  AnalyzerVisitor.hpp  Context.hpp  OperatorTypeUtilities.hpp  ProcessOperatorPrecedence.hpp  Scope.hpp  SetLocationInfo.hpp  ShuntingYardAlgorithm.hpp  SymbolKeyResolver.hpp  (+9 more)
include/asg/: Arglist.hpp  Asg.hpp  AsgPrinter.hpp  Assign.hpp  Assignoperator.hpp  Bitoperator.hpp  Bits.hpp  Break.hpp  Case.hpp  Cast.hpp  Class.hpp  Comparisonoperator.hpp  Condition.hpp  Constructcall.hpp  Continue.hpp  Datatype.hpp  Double.hpp  Dowhile.hpp  Enumeration.hpp  Expression.hpp  Expressionoperatorerty.hpp  Expressionpostoperator.hpp  Expressionpreoperator.hpp  Expressionstat.hpp  Expressionterm.hpp  Expressionvalue.hpp  Float.hpp  For.hpp  Function.hpp  FunctionType.hpp  Functionattribute.hpp  Functioncall.hpp  Functiondefinition.hpp  Identifier.hpp  If.hpp  Import.hpp  Initlist.hpp  Integer.hpp  Integer16.hpp  Integer32.hpp  (+39 more)
include/ast/: ArglistNode.hpp  AssignNode.hpp  AssignOperator.hpp  AssignopNode.hpp  Ast.hpp  AstPrinter.hpp  BitopNode.hpp  BitsNode.hpp  BitwiseOperator.hpp  BoolNode.hpp  Boolean.hpp  BreakNode.hpp  CaseNode.hpp  CastNode.hpp  ClassNode.hpp  ComparisonOperator.hpp  CompopNode.hpp  ConditionNode.hpp  ConstructcallNode.hpp  ContinueNode.hpp  DatatypeNode.hpp  DowhileNode.hpp  EnumNode.hpp  ExprNode.hpp  ExpropNode.hpp  ExprpostopNode.hpp  ExprpreopNode.hpp  ExprstatNode.hpp  ExprtermNode.hpp  ExprvalueNode.hpp  ForNode.hpp  FuncNode.hpp  FuncattrNode.hpp  FunccallNode.hpp  FuncdefNode.hpp  IdentifierNode.hpp  IfNode.hpp  ImportNode.hpp  InitlistNode.hpp  InterfaceNode.hpp  (+39 more)
include/detail/: AbstractContainer.hpp  AssImpUtilities.hpp  Assert.hpp  DebugSerializer.hpp  Format.hpp  GenerateCube.hpp  GenerateVertices.hpp  InsertionOperatorUtils.hpp  InsertionOperators.hpp  SymbolKeyResolver.hpp  ToStringUtils.hpp  Validation.hpp  monostate.hpp
include/exceptions/: AllocaInstNotFoundException.hpp  DuplicateAllocaInstException.hpp  DuplicateArgumentException.hpp  DuplicateBasicBlockException.hpp  DuplicateFunctionException.hpp  DuplicateSymbolException.hpp  DuplicateTypeException.hpp  DuplicateValueException.hpp  Exception.hpp  FileNotFoundException.hpp  FunctionNotFoundException.hpp  InvalidArgumentException.hpp  InvalidOperationException.hpp  RuntimeException.hpp  Stacktrace.hpp  SymbolNotFoundException.hpp  Throw.hpp  TypeNotFoundException.hpp  ValueNotFoundException.hpp
include/fs/: File.hpp  FileSystem.hpp  IFile.hpp  IFileSystem.hpp
include/generator/: IGenerator.hpp
include/logger/: ILogger.hpp  Logger.hpp
include/parser/: AbstractParser.hpp  AbstractParser.inl  AnnotationFunction.hpp  AstAll.hpp  AstPrinter2.hpp  ErrorHandlerFunction.hpp  Iterator.hpp  Parser.hpp  Parser2.hpp  Skipper.hpp
include/serialization/: ISerializable.hpp  ITextSerializable.hpp  TextInArchive.hpp  TextOutArchive.hpp
include/symbol/: AbstractSymbolContainer.hpp  AbstractSymbolContainer.inl  ArraySymbol.hpp  ClassSymbol.hpp  ConstructorSymbols.hpp  FunctionSymbol.hpp  FunctionSymbols.hpp  OperatorSymbol.hpp  OperatorSymbols.hpp  Symbol.hpp  SymbolTable.hpp  Symbols.hpp
include/type/: AbstractTypeContainer.hpp  AbstractTypeContainer.inl  ArrayType.hpp  ClassType.hpp  ConstructorTypes.hpp  FunctionType.hpp  FunctionTypes.hpp  OperatorType.hpp  OperatorTypeId.hpp  OperatorTypes.hpp  PrimitiveType.hpp  Type.hpp  TypeModifier.hpp  TypeQualifier.hpp  TypeTable.hpp  Types.hpp  UnknownType.hpp
include/utilities/: BoostAnyUtilities.hpp  GlmUtilities.hpp  ImageUtilities.hpp  IoUtilities.hpp  Properties.hpp  StringUtilities.hpp
src/: IceScriptEngine.cpp  Main.cpp
src/analyzer/: Analyzer.cpp  AnalyzerVisitor.cpp
src/asg/: AsgPrinter.cpp  OperatorType.cpp  Type.cpp
src/ast/: AstPrinter.cpp
src/exceptions/: Exception.cpp  Stacktrace.cpp
src/fs/: File.cpp  FileSystem.cpp
src/logger/: Logger.cpp
src/parser/: Parser.cpp
src/symbol/: FunctionSymbols.cpp  OperatorSymbols.cpp  Symbols.cpp
src/type/: ArrayType.cpp  ClassType.cpp  FunctionType.cpp  FunctionTypes.cpp  OperatorType.cpp  OperatorTypes.cpp  Type.cpp  TypeTable.cpp  Types.cpp
src/utilities/: Properties.cpp
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt
tests/functional/fixtures/analyzer/: test.is
tests/functional/fixtures/c_pre_processor/: test_include_3.hpp  test_include_4.hpp  test_include_5.hpp  test_include_6.hpp  test_include_with_define.hpp
tests/functional/fixtures/c_pre_processor/1/: test_include_1.hpp
tests/functional/fixtures/generator/: test.is
tests/functional/fixtures/parser/: test.is
tests/functional/include/parser/: TestParser.hpp
tests/functional/src/generator/llvm/: LlvmIr.cpp
tests/functional/src/parser/: Parser.cpp
tests/functional/src/parser/rules/: ArglistRule.cpp  BitopRule.cpp  BitsRule.cpp  ClassRule.cpp  ConstructcallRule.cpp  DowhileRule.cpp  ExprstatRule.cpp  ExprtermRule.cpp  ExprvalueRule.cpp  ForRule.cpp  FuncRule.cpp  FuncattrRule.cpp  FuncdefRule.cpp  IfRule.cpp  InitlistRule.cpp  LambdaRule.cpp  LiteralRule.cpp  MathopRule.cpp  NumberRule.cpp  StatblockRule.cpp  StatementRule.cpp  TryRule.cpp  TypeRule.cpp  TypedefRule.cpp  TypemodRule.cpp  VarRule.cpp  VaraccessRule.cpp  VirtpropRule.cpp  WhileRule.cpp
tests/functional/src/scripting/angel_script/: AngelscriptCPreProcessor.cpp
tests/functional/src/symbol/: FunctionSymbol.cpp
tests/functional/src/type/: FunctionType.cpp
tests/src/: CPreProcessor.cpp
tests/system/: CMakeLists.txt
tests/system/fixtures/: test.is
tests/system/src/: IceScriptEngine.cpp
(+653 files in other folders)
